--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eventsource-parser": "^0.1.0",
     "next": "13.2.4",
     "openai": "^3.2.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
