Fix ChatInput prop name

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eventsource-parser": "^0.1.0",
-    "next": "13.2.4",
-    "openai": "^3.2.1",
+    "next": "^15.5.0",
+    "openai": "^5.15.0",
     "pdfjs-dist": "^5.4.54",
     "react": "18.2.0",
     "react-dom": "18.2.0",
