--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdfjs-dist": "^5.4.54",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
