updated chat chatinput and chat api

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "ai": "^5.0.26",
     "airtable": "^0.12.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eventsource-parser": "^0.1.0",
+    "formidable": "^3.5.4",
     "next": "^15.5.0",
     "openai": "^5.15.0",
     "pdfjs-dist": "^5.4.54",
@@ -26,6 +28,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
